cabal-version:      2.4
name:               px-crawler
version:            0.1.0.0
author:             pastchick3
maintainer:         pastchick3@gmail.com
extra-source-files:
    CHANGELOG.md,
    LICENSE
    README.md

executable px-crawler
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.0,
        http-conduit ^>=2.3.8,
        bytestring ^>=0.11.1,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test-integration
    type:             exitcode-stdio-1.0
    main-is:          test.hs
    build-depends:    base ^>=4.15.0
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -Wall
