cabal-version:      2.4
name:               px-crawler
version:            0.1.0.0
author:             pastchick3
maintainer:         pastchick3@gmail.com
extra-source-files:
    CHANGELOG.md,
    LICENSE
    README.md

library
    exposed-modules:  Crawler
    build-depends:
        base ^>=4.15.0.0,
        http-conduit ^>=2.3.8,
        bytestring ^>=0.11.1.0,
        tagsoup ^>=0.14.8,
        aeson ^>=2.0.2.0,
        containers ^>=0.6.5.1,
        text ^>=1.2.5.0,
        regex-tdfa ^>=1.3.1.1,
        directory ^>=1.3.7.0,
        scientific ^>=0.3.7.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable px-crawler
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.0.0,
        px-crawler
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O2

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          test.hs
    build-depends:
        base ^>=4.15.0.0,
        directory ^>=1.3.7.0,
        px-crawler,
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -Wall -O0
